test: Add tests for UseCaseResult and ResultProjectionBuilder
- Add comprehensive tests for UseCaseResult.getDiffableContent()
- Add tests for record accessors and convenience methods
- Add tests for ResultProjectionBuilder normalization
- Add tests for custom DiffableContentProvider integration
- Fix null value handling in UseCaseResult compact constructor